custom-style.css
/* ... */
body:not(.home) .site-header:before {
    background: rgba( 238, 238, 238, 1 );
    content: "";
    display: block;
    height: .2rem;
    margin-left: -50vw;
    position: absolute;
        left: 50%;
        top: 100%;
    width: 100vw;
}

.home .site-header {
    height: 10rem;
    position: absolute;
        left: 0;
        right: 0;
        top: 0;
    z-index: 25;
}

.site-header h1.site-title a {
    background: url( https://2016.stockholm.wordcamp.org/files/2016/08/wc-logo-black.png ) no-repeat center;
    background-size: 100% auto;
    display: block;
        -ms-flex: 1 0 16.3rem;
        -webkit-flex: 1 0 16.3rem;
    flex: 1 0 16.3rem;
    height: 5.9rem;
    margin-right: 20rem;
    text-indent: -9999rem;
    width: 16.3rem;
}

.home .site-header h1.site-title a,
.site-header h2.site-description,
.site-header .skip-link {
    display: none;
}


/* NAVIGATION */


@media ( min-width: 600px ) { /* Saves us having to overwrite for mobile */

    .site-navigation {
        padding-right: 6rem;
        position: relative;
        width: 100%;
    }

    .home .site-navigation .menu {
        text-align: center;
    }
    
    .site-navigation .menu > li {
        display: inline-block;
        float: none;
        padding: 1rem 0 1rem 0;
        position: relative;
    }
    
    .site-navigation .menu > li.menu-item-has-children {
        padding-right: 2rem;
    }
    
    .site-navigation .menu > li.menu-item-has-children:after {
        background: url( https://2016.stockholm.wordcamp.org/files/2016/08/children-arrow.png ) no-repeat center;
        background-size: auto 100%;
        content: "";
        display: block;
        height: .6rem;
        position: absolute;
            right: 0;
            top: 2.3rem;
        width: 1rem;
    }
    
    .home .site-navigation .menu > li.menu-item-has-children:after {
        background-image: url( https://2016.stockholm.wordcamp.org/files/2016/08/children-arrow-white.png );
    }

    .site-navigation .menu > li > a {
        color: rgba( 51, 51, 51, 1 );
        font-family: 'freight-sans-pro', Roboto, sans-serif;
        font-size: 2rem;
    }
    
    .home .site-navigation .menu > li > a {
        color: rgba( 255, 255, 255, 1 );
        font-size: 1.8rem;
        font-weight: 600;
        letter-spacing: .1rem;
        text-transform: uppercase;
    }
    
    .header .site-navigation a:hover {
        color: rgba( 255, 255, 255, 1 );
        text-decoration: underline;
    }
    
    .home .site-navigation .menu > li > a {
        text-shadow: 0 .1rem 0 rgba( 0, 0, 0, 0.1 );
    }
    
    .site-navigation .menu > li + li {
        margin: 0 0 0 5rem;
    }
    
    body .site-navigation ul ul {
        background: rgba( 17, 17, 17, 1 );
        border-radius: .3rem .3rem .3rem .3rem;
        box-shadow: none !important;
        padding: 1rem 0 1rem 0;
        position: absolute;
            left: calc( 50% - 10rem );
            top: 100%;
        width: 20rem;
    }
    
    body .site-navigation ul ul:before {
        border: 0.6rem solid transparent;
        border-bottom-color: rgba( 17, 17, 17, 1 );
        content: "";
        display: block;
        position: absolute;
            left: calc( 50% - 0.6rem );
            bottom: calc( 100% );
            
    }
    
    body .site-navigation ul ul a {
        color: rgba( 255, 255, 255, 1 );
        display: block;
        font-family: 'freight-sans-pro', Roboto, sans-serif;
        font-size: 1.6rem;
        line-height: 1.1;
        padding: 1rem 1.5rem 1rem 1.5rem;
        text-align: left;
    }
    
    body .site-navigation .twitter-link {
        display: block;
        padding: 0 0 0 0;
        position: absolute;
            right: 0;
            top: calc( 50% - 1.2rem );
    }
    
    body .site-navigation .twitter-link a {
        background: url( https://2016.stockholm.wordcamp.org/files/2016/08/bird-black.png ) no-repeat center;
        background-size: auto 100%;
        display: block;
        height: 2.5rem;
        opacity: 0.5;
        text-indent: -99999rem;
        width: 3.2rem;
    }
    
    body .site-navigation .twitter-link a:hover {
        opacity: 1;
    }
    
    body.home .site-navigation .twitter-link {
        display: none;
    }

}


/* HOME */


.home section {
    padding: 8rem 0 8rem 0;
    width: 100%;
}

.home .inner {
    margin: 0 auto 0 auto;
    max-width: 90%;
    width: 124rem;
}


/* HERO */


.hero {
        -webkit-box-align: center;
        -ms-flex-align: center;
    align-items: center;
    background-image: url( https://2016.stockholm.wordcamp.org/files/2016/08/wc-hero-bg.jpg );
        display: -webkit-box;
        display: -ms-flexbox;
    display: flex;
    height: 100vh;
    min-height: 55rem;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
    justify-content: center;
    position: relative;
}

.hero:before {
    background-image: linear-gradient( 31deg, #2082D0 0%, #F7CC39 100% );
    content: "";
    display: block;
    height: 100vh;
    opacity: 0.55;
    position: absolute;
        left: 0;
        right: 0;
        top: 0;
}

.hero .inner {
    color: rgba( 255, 255, 255, 1 );
    position: relative;
    text-align: center;
    text-shadow: 0 .1rem 0 rgba( 0, 0, 0, 0.1 );
}

.hero img {
    display: inline-block;
    height: 16.1rem;
    margin-bottom: 1.5rem;
}

.hero h1 {
    font-size: 6.4rem;
    line-height: 1;
    margin-bottom: 2rem;
}

.hero h1 span {
    font-style: italic;
}

.hero .intro-arrow {
    background: url( https://2016.stockholm.wordcamp.org/files/2016/08/intro-arrow.png ) no-repeat center;
    background-size: 3.2rem auto;
    display: block;
    height: 3.8rem;
    width: 6.4rem;
    position: absolute;
        bottom: 6.1rem;
        left: calc( 50% - 3.2rem );
}

.hero .intro-arrow:hover {
    bottom: 5.8rem;
}


/* INTRO */


.intro .inner {
    width: 102rem;
    text-align: center;
}
/* ... */

